# Pailer

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  I18N_ARCHITECTURE.md  LICENSE  README-zh.md  README.md  README.md.old  README_en.md  RELEASE_NOTES.md  makefile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: .release-please-config.json  .release-please-manifest.json  dependabot.yml
.github/workflows/: action-delete.yml  beta.yml  build-analysis.yml  docs.yml  (+4 more)
doc/: README-zh.md
docs/: README-zh.md  faq.md  index.md  introduction.md  test-update.json
scripts/: bump-version.js  make-format-pr.ps1  make-format.ps1  pailer_data_clean.ps1
src/: App.css  App.tsx  i18n.ts  index.tsx
src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json  tauri.conf.no-updater.json  tauri.conf.test.json
src-tauri/capabilities/: default.json
src-tauri/custom-nsis/: installer.nsi
src-tauri/icons/: icon.icns
src-tauri/resources/locales/: en.json  zh.json
src-tauri/scripts/: self_update.cmd  self_update.ps1
src-tauri/src/: cold_start.rs  i18n.rs  lib.rs  main.rs  models.rs  scheduler.rs  state.rs  tray.rs  utils.rs
src-tauri/src/commands/: app_info.rs  auto_cleanup.rs  bucket.rs  bucket_install.rs  bucket_parser.rs  bucket_search.rs  crypto.rs  custom_update.rs  debug.rs  fallback_update.rs  hold.rs  info.rs  install.rs  installed.rs  linker.rs  manifest.rs  mod.rs  package_icon.rs  package_mutation.rs  powershell.rs  process_control.rs  scoop.rs  scoop_update_runner.rs  search.rs  self_update.rs  settings.rs  startup.rs  status.rs  test_update.rs  uninstall.rs  update.rs  update_config.rs  updates.rs  version.rs  virustotal.rs
src-tauri/src/commands/doctor/: cache.rs  checkup.rs  cleanup.rs  mod.rs  notify_icon_settings.rs  shim.rs  versioned_apps.rs  windows_checks.rs
src-tauri/src/commands/doctor/notify_icon_settings/: mod.rs  model.rs  plan.rs  registry.rs
src-tauri/src/commands/search/: search_tests.rs
src-tauri/src/commands/settings/: scoop_path.rs
src-tauri/src/utils/: utils_tests.rs
(+210 files in other folders)
