[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "z"

[package]
name = "Pailer"
version = "1.7.3"
description = "A GUI for Scoop - Pailer"
authors = ["Kwensiu"]
license = "MIT"
repository = "https://github.com/Kwensiu/Pailer"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pailer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["tray-icon"] }
tauri-plugin-shell = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.21"
tauri-plugin-log = { version = "2.7" }
reqwest = { version = "0.13", features = ["json", "blocking"] }
csv = "1.4"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "process", "fs", "time", "io-util"] }
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0"
regex = "1.12"
rayon = "1.10"
itertools = "0.14"
once_cell = "1.21.4"
base64 = "0.22"
sha2 = "0.10"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
git2 = "0.20"
url = "2.5"
lazy_static = "1.4.0"
tempfile = "3.27"

[features]
default = []
dev-self-update = []

[target."cfg(windows)".dependencies]
windows-dpapi = "0.2.0"
winreg = "0.56.0"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Globalization",
] }
lnk = "0.6.3"
tauri-plugin-updater = "2.7.1"
tauri-plugin-single-instance = "2"
